Foodie login fixed

--- a/resource-server/src/main/resources/messages.properties
+++ b/resource-server/src/main/resources/messages.properties
@@ -3,3 +3,4 @@ validation.firstName.notEmpty=First name cannot be empty
 validation.lastName.notEmpty=Last name cannot be empty
 validation.password.notEmpty=Password cannot be empty
 validation.phoneNumber.notEmpty=Phone number cannot be empty
+validation.address.notEmpty=Address cannot be empty
